extends Panel

# æ¸¸æˆå¸¸é‡
const GRID_SIZE = 20
const GRID_WIDTH = 30
const GRID_HEIGHT = 30
const DATA_FILE_PATH = "user://playergamedata.json"

# æ–¹å‘æšä¸¾
enum Direction {
	UP,
	DOWN,
	LEFT,
	RIGHT
}

# é£Ÿç‰©ç±»å‹æšä¸¾
enum FoodType {
	NORMAL,    # æ™®é€šé£Ÿç‰© +10åˆ†
	GOLDEN,    # é‡‘è‰²é£Ÿç‰© +50åˆ†
	SPEED,     # åŠ é€Ÿé£Ÿç‰© +20åˆ†ï¼Œä¸´æ—¶åŠ é€Ÿ
	SLOW,      # å‡é€Ÿé£Ÿç‰© +30åˆ†ï¼Œä¸´æ—¶å‡é€Ÿ
	BONUS      # å¥–åŠ±é£Ÿç‰© +100åˆ†
}

# æ¸¸æˆå˜é‡
var snake_body = []
var snake_direction = Direction.RIGHT
var next_direction = Direction.RIGHT
var food_position = Vector2()
var food_type = FoodType.NORMAL
var score = 0
var best_score = 0
var level = 1
var speed_multiplier = 1.0
var speed_effect_timer = 0.0
var game_over = false
var game_started = false  # æ·»åŠ æ¸¸æˆå¼€å§‹çŠ¶æ€
var obstacles = []
var games_played = 0
var total_food_eaten = 0
var player_data = {}

# èŠ‚ç‚¹å¼•ç”¨
@onready var game_area = $GameArea
@onready var score_label = $ScoreLabel
@onready var game_over_label = $GameOverLabel
@onready var game_timer = $GameTimer
@onready var virtual_controls = $VirtualControls

func _ready():
	# è¿æ¥å®šæ—¶å™¨ä¿¡å·
	game_timer.timeout.connect(_on_game_timer_timeout)
	
	# è®¾ç½®æ¸¸æˆåŒºåŸŸæ ·å¼
	game_area.modulate = Color(0.1, 0.1, 0.15, 0.9)
	
	# è¿æ¥è™šæ‹ŸæŒ‰é”®ä¿¡å·
	setup_virtual_controls()
	
	# åŠ è½½ç©å®¶æ•°æ®
	load_player_data()
	
	# æ˜¾ç¤ºæ¸¸æˆå¼€å§‹ç•Œé¢
	show_start_screen()

func init_game():
	# é‡ç½®æ¸¸æˆçŠ¶æ€
	game_over = false
	game_started = true
	score = 0
	level = 1
	speed_multiplier = 1.0
	speed_effect_timer = 0.0
	snake_direction = Direction.RIGHT
	next_direction = Direction.RIGHT
	games_played += 1
	
	# åˆå§‹åŒ–è›‡èº«
	snake_body.clear()
	snake_body.append(Vector2(5, 5))
	snake_body.append(Vector2(4, 5))
	snake_body.append(Vector2(3, 5))
	
	# æ¸…ç©ºéšœç¢ç‰©
	obstacles.clear()
	
	# ç”Ÿæˆé£Ÿç‰©å’Œéšœç¢ç‰©
	generate_food()
	generate_obstacles()
	
	# æ›´æ–°UI
	update_score()
	game_over_label.visible = false
	
	# è®¾ç½®å®šæ—¶å™¨é€Ÿåº¦
	game_timer.wait_time = 0.2 / speed_multiplier
	game_timer.start()

func _input(event):
	if event is InputEventKey and event.pressed:
		# æ¸¸æˆæœªå¼€å§‹æ—¶ï¼ŒæŒ‰Qé”®å¼€å§‹æ¸¸æˆ
		if not game_started:
			if event.keycode == KEY_Q:
				init_game()
			return
		
		if game_over:
			if event.keycode == KEY_SPACE:
				init_game()
			elif event.keycode == KEY_Q:
				init_game()
			return
		
		# æ§åˆ¶è›‡çš„æ–¹å‘
		match event.keycode:
			KEY_UP, KEY_W:
				change_direction(Direction.UP)
			KEY_DOWN, KEY_S:
				change_direction(Direction.DOWN)
			KEY_LEFT, KEY_A:
				change_direction(Direction.LEFT)
			KEY_RIGHT, KEY_D:
				change_direction(Direction.RIGHT)

func change_direction(new_direction: Direction):
	# é˜²æ­¢è›‡åå‘ç§»åŠ¨
	match new_direction:
		Direction.UP:
			if snake_direction != Direction.DOWN:
				next_direction = Direction.UP
		Direction.DOWN:
			if snake_direction != Direction.UP:
				next_direction = Direction.DOWN
		Direction.LEFT:
			if snake_direction != Direction.RIGHT:
				next_direction = Direction.LEFT
		Direction.RIGHT:
			if snake_direction != Direction.LEFT:
				next_direction = Direction.RIGHT

func _on_game_timer_timeout():
	if not game_started or game_over:
		return
	
	# å¤„ç†é€Ÿåº¦æ•ˆæœ
	if speed_effect_timer > 0:
		speed_effect_timer -= game_timer.wait_time
		if speed_effect_timer <= 0:
			speed_multiplier = 1.0
			game_timer.wait_time = 0.2 / speed_multiplier
	
	# æ›´æ–°æ–¹å‘
	snake_direction = next_direction
	
	# ç§»åŠ¨è›‡
	move_snake()
	
	# æ£€æŸ¥ç¢°æ’
	check_collisions()
	
	# é‡ç»˜æ¸¸æˆ
	queue_redraw()

func move_snake():
	var head = snake_body[0]
	var new_head = head
	
	# æ ¹æ®æ–¹å‘è®¡ç®—æ–°çš„å¤´éƒ¨ä½ç½®
	match snake_direction:
		Direction.UP:
			new_head = Vector2(head.x, head.y - 1)
		Direction.DOWN:
			new_head = Vector2(head.x, head.y + 1)
		Direction.LEFT:
			new_head = Vector2(head.x - 1, head.y)
		Direction.RIGHT:
			new_head = Vector2(head.x + 1, head.y)
	
	# æ·»åŠ æ–°å¤´éƒ¨
	snake_body.insert(0, new_head)
	
	# æ£€æŸ¥æ˜¯å¦åƒåˆ°é£Ÿç‰©
	if new_head == food_position:
		# æ ¹æ®é£Ÿç‰©ç±»å‹å¢åŠ åˆ†æ•°å’Œæ•ˆæœ
		eat_food()
		
		# ç”Ÿæˆæ–°é£Ÿç‰©
		generate_food()
		
		# æ£€æŸ¥ç­‰çº§æå‡
		check_level_up()
	else:
		# ç§»é™¤å°¾éƒ¨
		snake_body.pop_back()

func check_collisions():
	var head = snake_body[0]
	
	# æ£€æŸ¥è¾¹ç•Œç¢°æ’
	if head.x < 0 or head.x >= GRID_WIDTH or head.y < 0 or head.y >= GRID_HEIGHT:
		game_over = true
		show_game_over()
		return
	
	# æ£€æŸ¥è‡ªèº«ç¢°æ’
	for i in range(1, snake_body.size()):
		if head == snake_body[i]:
			game_over = true
			show_game_over()
			return
	
	# æ£€æŸ¥éšœç¢ç‰©ç¢°æ’
	for obstacle in obstacles:
		if head == obstacle:
			game_over = true
			show_game_over()
			return

func generate_food():
	var attempts = 0
	while attempts < 100:  # é˜²æ­¢æ— é™å¾ªç¯
		food_position = Vector2(
			randi() % GRID_WIDTH,
			randi() % GRID_HEIGHT
		)
		
		# ç¡®ä¿é£Ÿç‰©ä¸åœ¨è›‡èº«ä¸Šå’Œéšœç¢ç‰©ä¸Š
		var food_blocked = false
		for segment in snake_body:
			if segment == food_position:
				food_blocked = true
				break
		
		if not food_blocked:
			for obstacle in obstacles:
				if obstacle == food_position:
					food_blocked = true
					break
		
		if not food_blocked:
			break
		
		attempts += 1
	
	# éšæœºç”Ÿæˆé£Ÿç‰©ç±»å‹
	var rand = randf()
	if rand < 0.6:  # 60% æ™®é€šé£Ÿç‰©
		food_type = FoodType.NORMAL
	elif rand < 0.75:  # 15% é‡‘è‰²é£Ÿç‰©
		food_type = FoodType.GOLDEN
	elif rand < 0.85:  # 10% åŠ é€Ÿé£Ÿç‰©
		food_type = FoodType.SPEED
	elif rand < 0.95:  # 10% å‡é€Ÿé£Ÿç‰©
		food_type = FoodType.SLOW
	else:  # 5% å¥–åŠ±é£Ÿç‰©
		food_type = FoodType.BONUS

func update_score():
	score_label.text = "ğŸ åˆ†æ•°: " + str(score) + "\nğŸ† æœ€é«˜åˆ†: " + str(best_score) + "\nâ­ ç­‰çº§: " + str(level) + "\nğŸ® æ¸¸æˆæ¬¡æ•°: " + str(games_played)

func show_game_over():
	game_timer.stop()
	game_started = false
	if score > best_score:
		best_score = score
		update_score()
	save_player_data()
	game_over_label.text = "ğŸ® æ¸¸æˆç»“æŸ\nğŸ† åˆ†æ•°: " + str(score) + "\nâ­ ç­‰çº§: " + str(level) + "\n\nğŸ”„ æŒ‰Qé”®æˆ–ç©ºæ ¼é‡æ–°å¼€å§‹"
	game_over_label.visible = true

func eat_food():
	total_food_eaten += 1
	match food_type:
		FoodType.NORMAL:
			score += 10
		FoodType.GOLDEN:
			score += 50
		FoodType.SPEED:
			score += 20
			speed_multiplier = 1.5
			speed_effect_timer = 5.0
			game_timer.wait_time = 0.2 / speed_multiplier
		FoodType.SLOW:
			score += 30
			speed_multiplier = 0.7
			speed_effect_timer = 5.0
			game_timer.wait_time = 0.2 / speed_multiplier
		FoodType.BONUS:
			score += 100
	update_score()

func check_level_up():
	var new_level = (total_food_eaten / 10) + 1
	if new_level > level:
		level = new_level
		generate_obstacles()  # æ¯å‡çº§å¢åŠ éšœç¢ç‰©

func generate_obstacles():
	# æ ¹æ®ç­‰çº§ç”Ÿæˆéšœç¢ç‰©
	var obstacle_count = min(level - 1, 10)  # æœ€å¤š10ä¸ªéšœç¢ç‰©
	obstacles.clear()
	
	for i in range(obstacle_count):
		var attempts = 0
		while attempts < 50:
			var obstacle_pos = Vector2(
				randi() % GRID_WIDTH,
				randi() % GRID_HEIGHT
			)
			
			# ç¡®ä¿éšœç¢ç‰©ä¸åœ¨è›‡èº«ã€é£Ÿç‰©æˆ–å…¶ä»–éšœç¢ç‰©ä¸Š
			var blocked = false
			for segment in snake_body:
				if segment == obstacle_pos:
					blocked = true
					break
			
			if not blocked and obstacle_pos == food_position:
				blocked = true
			
			if not blocked:
				for existing_obstacle in obstacles:
					if existing_obstacle == obstacle_pos:
						blocked = true
						break
			
			if not blocked:
				obstacles.append(obstacle_pos)
				break
			
			attempts += 1

func setup_virtual_controls():
	if not virtual_controls:
		return
	
	var up_btn = virtual_controls.get_node("UpButton")
	var down_btn = virtual_controls.get_node("DownButton")
	var left_btn = virtual_controls.get_node("LeftButton")
	var right_btn = virtual_controls.get_node("RightButton")
	var restart_btn = virtual_controls.get_node("RestartButton")
	
	if up_btn:
		up_btn.pressed.connect(_on_virtual_button_pressed.bind(Direction.UP))
	if down_btn:
		down_btn.pressed.connect(_on_virtual_button_pressed.bind(Direction.DOWN))
	if left_btn:
		left_btn.pressed.connect(_on_virtual_button_pressed.bind(Direction.LEFT))
	if right_btn:
		right_btn.pressed.connect(_on_virtual_button_pressed.bind(Direction.RIGHT))
	if restart_btn:
		restart_btn.pressed.connect(_on_restart_button_pressed)

func _on_virtual_button_pressed(direction: Direction):
	if game_started and not game_over:
		change_direction(direction)

func _on_restart_button_pressed():
	if not game_started or game_over:
		init_game()

func load_player_data():
	if FileAccess.file_exists(DATA_FILE_PATH):
		var file = FileAccess.open(DATA_FILE_PATH, FileAccess.READ)
		if file:
			var json_string = file.get_as_text()
			file.close()
			
			var json = JSON.new()
			var parse_result = json.parse(json_string)
			if parse_result == OK:
				player_data = json.data
				if player_data.has("snake"):
					var game_data = player_data["snake"]
					best_score = game_data.get("best_score", 0)
					games_played = game_data.get("games_played", 0)
					total_food_eaten = game_data.get("total_food_eaten", 0)

func show_start_screen():
	# é‡ç½®çŠ¶æ€
	game_started = false
	game_over = false
	
	# åˆå§‹åŒ–è›‡èº«ç”¨äºæ˜¾ç¤º
	snake_body.clear()
	snake_body.append(Vector2(5, 5))
	snake_body.append(Vector2(4, 5))
	snake_body.append(Vector2(3, 5))
	
	# æ¸…ç©ºéšœç¢ç‰©
	obstacles.clear()
	
	# ç”Ÿæˆåˆå§‹é£Ÿç‰©
	food_position = Vector2(10, 10)
	food_type = FoodType.NORMAL
	
	# æ˜¾ç¤ºå¼€å§‹æç¤º
	game_over_label.text = "ğŸ è´ªåƒè›‡æ¸¸æˆ ğŸ\n\nğŸ† æœ€é«˜åˆ†æ•°: " + str(best_score) + "\nğŸ¯ æ¸¸æˆæ¬¡æ•°: " + str(games_played) + "\n\nğŸ® æŒ‰Qé”®å¼€å§‹æ¸¸æˆ\n\nğŸ¯ æ“ä½œè¯´æ˜:\næ–¹å‘é”®/WASD - æ§åˆ¶æ–¹å‘\n\nğŸ é£Ÿç‰©ç±»å‹:\nğŸ”´ æ™®é€šé£Ÿç‰© +10åˆ†\nğŸŸ¡ é‡‘è‰²é£Ÿç‰© +50åˆ†\nğŸ”µ åŠ é€Ÿé£Ÿç‰© +20åˆ†\nğŸŸ£ å‡é€Ÿé£Ÿç‰© +30åˆ†\nğŸŒˆ å¥–åŠ±é£Ÿç‰© +100åˆ†"
	game_over_label.visible = true
	
	# åœæ­¢å®šæ—¶å™¨
	game_timer.stop()
	
	update_score()
	queue_redraw()

func save_player_data():
	if not player_data.has("snake"):
		player_data["snake"] = {}
	
	player_data["snake"]["best_score"] = best_score
	player_data["snake"]["current_score"] = score
	player_data["snake"]["games_played"] = games_played
	player_data["snake"]["total_food_eaten"] = total_food_eaten
	player_data["snake"]["max_level_reached"] = level
	
	# æ›´æ–°å…¨å±€æ•°æ®
	if not player_data.has("global"):
		player_data["global"] = {}
	player_data["global"]["last_played"] = Time.get_datetime_string_from_system()
	
	var file = FileAccess.open(DATA_FILE_PATH, FileAccess.WRITE)
	if file:
		var json_string = JSON.stringify(player_data)
		file.store_string(json_string)
		file.close()

func _draw():
	if not game_area:
		return
	
	# ç»˜åˆ¶èƒŒæ™¯æ¸å˜
	var gradient = Gradient.new()
	gradient.add_point(0.0, Color(0.05, 0.1, 0.2, 0.95))
	gradient.add_point(0.5, Color(0.1, 0.15, 0.25, 0.9))
	gradient.add_point(1.0, Color(0.15, 0.2, 0.3, 0.95))
	draw_rect(Rect2(Vector2.ZERO, size), gradient.sample(0.5), true)
	
	# è·å–æ¸¸æˆåŒºåŸŸçš„ä½ç½®å’Œå¤§å°
	var area_pos = game_area.position
	var area_size = game_area.size
	
	# ç»˜åˆ¶æ¸¸æˆåŒºåŸŸé˜´å½±
	var shadow_offset = Vector2(4, 4)
	var area_rect = Rect2(area_pos + shadow_offset, area_size)
	draw_rect(area_rect, Color(0, 0, 0, 0.3), true)
	
	# ç»˜åˆ¶æ¸¸æˆåŒºåŸŸèƒŒæ™¯
	area_rect = Rect2(area_pos, area_size)
	draw_rect(area_rect, Color(0.08, 0.12, 0.18, 0.9), true)
	
	# è®¡ç®—ç½‘æ ¼å¤§å°
	var cell_width = area_size.x / GRID_WIDTH
	var cell_height = area_size.y / GRID_HEIGHT
	
	# ç»˜åˆ¶ç½‘æ ¼çº¿ï¼ˆæ·¡è‰²ï¼‰
	for x in range(GRID_WIDTH + 1):
		var start_pos = Vector2(area_pos.x + x * cell_width, area_pos.y)
		var end_pos = Vector2(area_pos.x + x * cell_width, area_pos.y + area_size.y)
		draw_line(start_pos, end_pos, Color(0.3, 0.3, 0.4, 0.3), 1)
	
	for y in range(GRID_HEIGHT + 1):
		var start_pos = Vector2(area_pos.x, area_pos.y + y * cell_height)
		var end_pos = Vector2(area_pos.x + area_size.x, area_pos.y + y * cell_height)
		draw_line(start_pos, end_pos, Color(0.3, 0.3, 0.4, 0.3), 1)
	
	# ç»˜åˆ¶éšœç¢ç‰©
	for obstacle in obstacles:
		var rect = Rect2(
			area_pos.x + obstacle.x * cell_width,
			area_pos.y + obstacle.y * cell_height,
			cell_width - 2,
			cell_height - 2
		)
		# ç»˜åˆ¶ç«‹ä½“éšœç¢ç‰©æ•ˆæœ
		draw_rect(rect, Color(0.4, 0.2, 0.1), true)
		# é«˜å…‰
		var highlight_rect = Rect2(rect.position + Vector2(1, 1), Vector2(rect.size.x - 2, rect.size.y * 0.3))
		draw_rect(highlight_rect, Color(0.6, 0.4, 0.2, 0.8), true)
	
	# ç»˜åˆ¶è›‡èº«
	for i in range(snake_body.size()):
		var segment = snake_body[i]
		var rect = Rect2(
			area_pos.x + segment.x * cell_width,
			area_pos.y + segment.y * cell_height,
			cell_width - 2,
			cell_height - 2
		)
		
		if i == 0:  # å¤´éƒ¨
			# ç»˜åˆ¶è›‡å¤´ï¼ˆåœ†å½¢ï¼Œå¸¦æ¸å˜ï¼‰
			var center = rect.get_center()
			var radius = min(rect.size.x, rect.size.y) * 0.4
			# é˜´å½±
			draw_circle(center + Vector2(1, 1), radius, Color(0, 0, 0, 0.3))
			# ä¸»ä½“
			draw_circle(center, radius, Color(0.2, 0.8, 0.2))
			# é«˜å…‰
			draw_circle(center - Vector2(2, 2), radius * 0.6, Color(0.4, 1.0, 0.4, 0.7))
			# çœ¼ç›
			var eye_size = radius * 0.2
			draw_circle(center + Vector2(-eye_size, -eye_size), eye_size * 0.5, Color.BLACK)
			draw_circle(center + Vector2(eye_size, -eye_size), eye_size * 0.5, Color.BLACK)
		else:  # èº«ä½“
			# ç»˜åˆ¶è›‡èº«ï¼ˆæ¸å˜è‰²ï¼‰
			var body_color = Color.LIME_GREEN.lerp(Color.DARK_GREEN, float(i) / snake_body.size())
			draw_rect(rect, body_color, true)
			# é«˜å…‰
			var highlight_rect = Rect2(rect.position + Vector2(1, 1), Vector2(rect.size.x - 2, rect.size.y * 0.3))
			draw_rect(highlight_rect, Color(1, 1, 1, 0.3), true)
	
	# ç»˜åˆ¶é£Ÿç‰©
	var food_rect = Rect2(
		area_pos.x + food_position.x * cell_width,
		area_pos.y + food_position.y * cell_height,
		cell_width - 2,
		cell_height - 2
	)
	
	# æ ¹æ®é£Ÿç‰©ç±»å‹ç»˜åˆ¶ä¸åŒæ•ˆæœ
	var food_center = food_rect.get_center()
	var food_radius = min(food_rect.size.x, food_rect.size.y) * 0.4
	
	match food_type:
		FoodType.NORMAL:
			# æ™®é€šçº¢è‰²é£Ÿç‰©
			draw_circle(food_center + Vector2(1, 1), food_radius, Color(0, 0, 0, 0.3))  # é˜´å½±
			draw_circle(food_center, food_radius, Color.RED)
			draw_circle(food_center - Vector2(1, 1), food_radius * 0.6, Color(1, 0.5, 0.5, 0.8))  # é«˜å…‰
		FoodType.GOLDEN:
			# é‡‘è‰²é£Ÿç‰©ï¼ˆé—ªçƒæ•ˆæœï¼‰
			var pulse = sin(Time.get_ticks_msec() * 0.008) * 0.2 + 0.8
			draw_circle(food_center + Vector2(1, 1), food_radius, Color(0, 0, 0, 0.3))  # é˜´å½±
			draw_circle(food_center, food_radius, Color.GOLD * pulse)
			draw_circle(food_center - Vector2(1, 1), food_radius * 0.6, Color.YELLOW)  # é«˜å…‰
		FoodType.SPEED:
			# è“è‰²åŠ é€Ÿé£Ÿç‰©
			draw_circle(food_center + Vector2(1, 1), food_radius, Color(0, 0, 0, 0.3))  # é˜´å½±
			draw_circle(food_center, food_radius, Color.CYAN)
			draw_circle(food_center - Vector2(1, 1), food_radius * 0.6, Color.LIGHT_BLUE)  # é«˜å…‰
		FoodType.SLOW:
			# ç´«è‰²å‡é€Ÿé£Ÿç‰©
			draw_circle(food_center + Vector2(1, 1), food_radius, Color(0, 0, 0, 0.3))  # é˜´å½±
			draw_circle(food_center, food_radius, Color.PURPLE)
			draw_circle(food_center - Vector2(1, 1), food_radius * 0.6, Color.MAGENTA)  # é«˜å…‰
		FoodType.BONUS:
			# å½©è™¹å¥–åŠ±é£Ÿç‰©ï¼ˆæ—‹è½¬å½©è™¹æ•ˆæœï¼‰
			var rainbow_time = Time.get_ticks_msec() * 0.003
			var rainbow_color = Color.from_hsv(fmod(rainbow_time, 1.0), 1.0, 1.0)
			draw_circle(food_center + Vector2(1, 1), food_radius, Color(0, 0, 0, 0.3))  # é˜´å½±
			draw_circle(food_center, food_radius, rainbow_color)
			draw_circle(food_center - Vector2(1, 1), food_radius * 0.6, Color.WHITE)  # é«˜å…‰


func _on_quit_button_pressed() -> void:
	self.hide()
	get_parent().remove_child(self)
	queue_free()
	pass 
